0.18.5
 - setup: migrate to pyproject.toml package file (#39)
0.18.4
 - fix: update np.loadtxt with old default encoding argument (#29)
0.18.3
 - ci: fix readthedocs.yml
0.18.2
 - docs: release limitations on docs requirements
0.18.1
 - ref: Migrate from pkg_resources to importlib.resources (#26)
0.18.0
 - ref: JPK calibration files are now not ignored anymore
 - ref: allow to specify custom metadata for JPK files
 - ref: replaced ReadJPKMetaKeyError with MissingMetaDataError
 - ref: support `return_modality` in `detect` methods of recipes
 - ref: cleanup of JPK reader class
0.17.1
 - maintenance release
0.17.0
 - feat: support loading stress-relaxation data from .jpk-force files (#9)
 - docs: add example for stress-relaxation data analysis
0.16.7
 - maintenance release
0.16.6
 - setup: bump igor2 from 0.4.0 to 0.5.0
0.16.5
 - setup: migrate from igor to igor2 (Python 3 support)
 - tests: add test for files that contain force data but no spring
   constant
0.16.4
 - enh: implement `AFMData.columns_innate` which is a list of columns
   present in the original data file
 - enh: implement `AFMData.reset_data` to remove all user-defined
   column data (i.e. columns not in `AFMData.columns_innate` or columns
   that override those)
0.16.3
 - fix: setting column data to `AFMSegment` did not work when column
   did only exist in raw data property
0.16.2
 - enh: implement `__setitem__` for `AFMSegment`
 - ref: make `data` and `raw_data` private properties of `AFMSegment`
0.16.1
 - enh: support .jpk-qi-series files (by extension)
 - enh: improve error handling when data exported from the JPK software
   does not contain encoder scaling offset and multiplier
 - ref: use f-strings more often
0.16.0
 - BREAKING CHANGE: "segment" column is no longer boolean, so it
   cannot be used directly for indexing (#15)
 - fix: support modified AFM workshop file format (#17)
 - fix: segment data via `AFMData.appr` and `AFMData.retr` did not